# docs/swagger.json
@@ -162,7 +162,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entity.Pedido"
+                                "$ref": "#/definitions/dto.ObterPedidosOutputDto"
                             }
                         }
                     },
@@ -200,7 +200,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entity.Produto"
+                                "$ref": "#/definitions/dto.ObterProdutoOutputDto"
                             }
                         }
                     },
@@ -237,7 +237,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/dto.ProdutoDto"
+                            "$ref": "#/definitions/dto.CriarProdutoInputDto"
                         }
                     }
                 ],
@@ -288,7 +288,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/entity.Produto"
+                                "$ref": "#/definitions/dto.ObterProdutoOutputDto"
                             }
                         }
                     },
@@ -346,6 +346,23 @@
                 }
             }
         },
+        "dto.CriarProdutoInputDto": {
+            "type": "object",
+            "properties": {
+                "categoria": {
+                    "$ref": "#/definitions/entity.CategoriaProduto"
+                },
+                "descricao": {
+                    "type": "string"
+                },
+                "nome": {
+                    "type": "string"
+                },
+                "valor": {
+                    "type": "number"
+                }
+            }
+        },
         "dto.ObterClienteOutputDto": {
             "type": "object",
             "properties": {
@@ -363,11 +380,34 @@
                 }
             }
         },
-        "dto.ProdutoDto": {
+        "dto.ObterPedidosOutputDto": {
+            "type": "object",
+            "properties": {
+                "clienteId": {
+                    "type": "string"
+                },
+                "data": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "numeroPedido": {
+                    "type": "integer"
+                },
+                "status": {
+                    "$ref": "#/definitions/entity.StatusPedido"
+                },
+                "valor": {
+                    "type": "number"
+                }
+            }
+        },
+        "dto.ObterProdutoOutputDto": {
             "type": "object",
             "properties": {
                 "categoria": {
-                    "type": "integer"
+                    "$ref": "#/definitions/entity.CategoriaProduto"
                 },
                 "descricao": {
                     "type": "string"
@@ -397,55 +437,6 @@
                 "Sobremesa",
                 "Acompanhamento"
             ]
-        },
-        "entity.Pedido": {
-            "type": "object",
-            "properties": {
-                "clienteId": {
-                    "type": "string"
-                },
-                "data": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "numeroPedido": {
-                    "type": "integer"
-                },
-                "produtos": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/entity.Produto"
-                    }
-                },
-                "status": {
-                    "$ref": "#/definitions/entity.StatusPedido"
-                },
-                "valor": {
-                    "type": "number"
-                }
-            }
-        },
-        "entity.Produto": {
-            "type": "object",
-            "properties": {
-                "categoria": {
-                    "$ref": "#/definitions/entity.CategoriaProduto"
-                },
-                "descricao": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "nome": {
-                    "type": "string"
-                },
-                "valor": {
-                    "type": "number"
-                }
-            }
         },
         "entity.StatusPedido": {
             "type": "integer",
