# internal/dto/produto_dto.go
@@ -1,14 +1,22 @@
 package dto
 
 import (
+	"github.com/felipefabricio/wonder-food/internal/entity"
 	"github.com/google/uuid"
 	"github.com/shopspring/decimal"
 )
 
-type ProdutoDto struct {
-	ID        uuid.UUID       `json:"id"`
-	Nome      string          `json:"nome"`
-	Descricao string          `json:"descricao"`
-	Categoria uint8           `json:"categoria"`
-	Valor     decimal.Decimal `json:"valor"`
+type CriarProdutoInputDto struct {
+	Nome      string                  `json:"nome"`
+	Descricao string                  `json:"descricao"`
+	Categoria entity.CategoriaProduto `json:"categoria"`
+	Valor     decimal.Decimal         `json:"valor"`
+}
+
+type ObterProdutoOutputDto struct {
+	ID        uuid.UUID               `json:"id"`
+	Nome      string                  `json:"nome"`
+	Descricao string                  `json:"descricao"`
+	Categoria entity.CategoriaProduto `json:"categoria"`
+	Valor     decimal.Decimal         `json:"valor"`
 }
